src/test/deca/syntax/valid/homemade/parser/test/test_affectation_plusieur_calcul.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de plusieurs calculs.
//
// Resultats:
//    21
//
// Historique:
//    cree le 01/01/2023


{
    int i = 3*5 + 6;
    println(i);
}