src/test/deca/syntax/invalid/homemade/test/test_pars_inv_if_oubli_condition.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 12 : Erreur (oubli condition)
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 0;
    if {
        println("Hello");
        x = x+ 1;
    }
    
}
